--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.Sehirplakakodu"
         tools:targetApi="31">
         <activity
+            android:name=".sakarya"
+            android:exported="false" />
+        <activity
+            android:name=".bartin"
+            android:exported="false" />
+        <activity
             android:name=".sinop"
             android:exported="false" />
         <activity
